Fix download view on mobile, fix cover update bug, try to fix incorrect order bug

--- a/src/Components/css/Progress.css
+++ b/src/Components/css/Progress.css
@@ -34,3 +34,20 @@
 .progressFull div {
   margin: 0 0.5em;
 }
+
+@media (max-width: 900px) {
+  .progressFull div {
+    margin: 0 0.15em;
+  }
+}
+
+@media (max-width: 680px) {
+  .progressFull progress {
+    display: none;
+  }
+
+  .progressFull .status {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
